deleting csv from python

--- a/Python/Exploring_datasets_2.ipynb
+++ b/Python/Exploring_datasets_2.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
@@ -186,22 +186,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pandas.core.groupby.DataFrameGroupBy object at 0x11196f518>"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "##group the dataframe by departamento and indicador\n",
     "by_depto_indicador = not_null.groupby(by=['iddepto', 'idindicador'])"
@@ -209,131 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>idmpio</th>\n",
-       "      <th>yea2005</th>\n",
-       "      <th>yea2006</th>\n",
-       "      <th>yea2007</th>\n",
-       "      <th>yea2008</th>\n",
-       "      <th>yea2009</th>\n",
-       "      <th>yea2010</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>iddepto</th>\n",
-       "      <th>idindicador</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">5.0</th>\n",
-       "      <th>cgrnacim</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>94636.00</td>\n",
-       "      <td>94141.00</td>\n",
-       "      <td>92465.00</td>\n",
-       "      <td>90973.00</td>\n",
-       "      <td>85955.000</td>\n",
-       "      <td>78207.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ctrmormt</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>61.00</td>\n",
-       "      <td>65.00</td>\n",
-       "      <td>37.00</td>\n",
-       "      <td>41.00</td>\n",
-       "      <td>48.000</td>\n",
-       "      <td>40.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pbepredc</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11.40</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pbrmivih</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.800</td>\n",
-       "      <td>2.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pcrparin</th>\n",
-       "      <td>5376.0</td>\n",
-       "      <td>97.65</td>\n",
-       "      <td>97.77</td>\n",
-       "      <td>97.72</td>\n",
-       "      <td>98.18</td>\n",
-       "      <td>98.505</td>\n",
-       "      <td>98.29</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     idmpio   yea2005   yea2006   yea2007   yea2008  \\\n",
-       "iddepto idindicador                                                   \n",
-       "5.0     cgrnacim        NaN  94636.00  94141.00  92465.00  90973.00   \n",
-       "        ctrmormt        NaN     61.00     65.00     37.00     41.00   \n",
-       "        pbepredc        NaN     11.40       NaN       NaN       NaN   \n",
-       "        pbrmivih        NaN       NaN       NaN       NaN       NaN   \n",
-       "        pcrparin     5376.0     97.65     97.77     97.72     98.18   \n",
-       "\n",
-       "                       yea2009   yea2010  \n",
-       "iddepto idindicador                       \n",
-       "5.0     cgrnacim     85955.000  78207.00  \n",
-       "        ctrmormt        48.000     40.00  \n",
-       "        pbepredc           NaN     10.20  \n",
-       "        pbrmivih         1.800      2.10  \n",
-       "        pcrparin        98.505     98.29  "
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#keeping only yea2005:yea2010 columns find the average of the value by departamento\n",
     "\n",
     "mean = by_depto_indicador[['yea2005','yea2006','yea2007','yea2008','yea2009','yea2010']].agg('mean')\n",
-    "median = by_depto_indicador[['idmpio','yea2005','yea2006','yea2007','yea2008','yea2009','yea2010']].agg('median')\n",
-    "\n",
-    "median.head()"
+    "median = by_depto_indicador[['yea2005','yea2006','yea2007','yea2008','yea2009','yea2010']].agg('median')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 123,
    "metadata": {
     "collapsed": false
    },
@@ -342,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2256 402\n"
+      "2256 1898\n"
      ]
     }
    ],
@@ -359,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
@@ -371,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
@@ -398,9 +277,21 @@
       "ctrmormt     ctrmormt       216\n",
       "Name: idindicador, dtype: int64\n",
       "idindicador  idindicador\n",
-      "ptrldeng     ptrldeng        12\n",
-      "pcrparin     pcrparin       192\n",
-      "ttdiesti     ttdiesti       198\n",
+      "caelacex     caelacex         2\n",
+      "paemetmo     paemetmo         2\n",
+      "pbepredg     pbepredg         2\n",
+      "pbepredc     pbepredc        26\n",
+      "pbrmivih     pbrmivih        56\n",
+      "pgeembar     pgeembar        68\n",
+      "ptrldeng     ptrldeng       122\n",
+      "ttdnesti     ttdnesti       174\n",
+      "pcrparin     pcrparin       204\n",
+      "pcrperca     pcrperca       204\n",
+      "pcrrncpn     pcrrncpn       204\n",
+      "rtrmorpu     rtrmorpu       204\n",
+      "ttdiesti     ttdiesti       204\n",
+      "cgrnacim     cgrnacim       210\n",
+      "ctrmormt     ctrmormt       216\n",
       "Name: idindicador, dtype: int64\n"
      ]
     }
