new changes including correlation of values for 2010

--- a/Python/Exploring datasets.ipynb
+++ b/Python/Exploring datasets.ipynb
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 164,
    "metadata": {
     "collapsed": false
    },
@@ -806,16 +806,6 @@
       "100    pbrmivih\n",
       "Name: idindicador, dtype: object\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 163,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -825,7 +815,7 @@
     "\n",
     "import numpy as np\n",
     "bydepto2010 = pd.pivot_table(grouped, index='iddepto', values='yea2010', columns='idindicador')\n",
-    "bydepto2010.corr().to_csv('')"
+    "bydepto2010.corr().to_csv('2010_indicador_corr_by_depto.csv')"
    ]
   },
   {
