--- a/Python/Exploring datasets.ipynb
+++ b/Python/Exploring datasets.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 182,
    "metadata": {
     "collapsed": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 186,
    "metadata": {
     "collapsed": false
    },
@@ -349,88 +349,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       idmpio\n",
-      "0     41503.0\n",
-      "2     76364.0\n",
-      "3     68169.0\n",
-      "6     15183.0\n",
-      "7     54520.0\n",
-      "8      5361.0\n",
-      "9     68780.0\n",
-      "10    73678.0\n",
-      "11     5480.0\n",
-      "12    25488.0\n",
-      "13    15185.0\n",
-      "15    52427.0\n",
-      "16    85015.0\n",
-      "18    25368.0\n",
-      "19    68013.0\n",
-      "21     5266.0\n",
-      "22    18256.0\n",
-      "23    68502.0\n",
-      "25    15162.0\n",
-      "26    52250.0\n",
-      "27    15293.0\n",
-      "28    47460.0\n",
-      "30    52254.0\n",
-      "31    23807.0\n",
-      "32    23162.0\n",
-      "33    20400.0\n",
-      "34    25483.0\n",
-      "35    70110.0\n",
-      "37    76036.0\n",
-      "40    41660.0\n",
-      "...       ...\n",
-      "2389  95001.0\n",
-      "2395   8296.0\n",
-      "2398  41206.0\n",
-      "2400  63111.0\n",
-      "2406   5390.0\n",
-      "2409   5847.0\n",
-      "2460  25797.0\n",
-      "2462  68498.0\n",
-      "2473  76243.0\n",
-      "2505  50318.0\n",
-      "2516  70230.0\n",
-      "2536  15172.0\n",
-      "2547  76377.0\n",
-      "2548  50124.0\n",
-      "2549  68669.0\n",
-      "2559   5150.0\n",
-      "2563  52720.0\n",
-      "2574  41885.0\n",
-      "2613  17444.0\n",
-      "2615   5313.0\n",
-      "2621  15835.0\n",
-      "2627   5209.0\n",
-      "2639   5044.0\n",
-      "2642  76318.0\n",
-      "2646  52378.0\n",
-      "2663  52480.0\n",
-      "2680  23675.0\n",
-      "2688  25151.0\n",
-      "2750  81001.0\n",
-      "2776  19622.0\n",
-      "\n",
-      "[1122 rows x 1 columns]\n"
+      "      iddepto                                           nomdepto\n",
+      "222      44.0                                         LA GUAJIRA\n",
+      "224      94.0                                            GUAINÍA\n",
+      "225      81.0                                             Arauca\n",
+      "239      13.0                                            BOLÍVAR\n",
+      "257      11.0                                             BOGOTÁ\n",
+      "279      76.0                                    VALLE DEL CAUCA\n",
+      "300     170.0                                           COLOMBIA\n",
+      "301      70.0                                              SUCRE\n",
+      "316      76.0                                             VAUPÉS\n",
+      "330      73.0                                             TOLIMA\n",
+      "336      88.0           Archipiélago de San Andrés y Providencia\n",
+      "346      41.0                                              HUILA\n",
+      "376      99.0                                            Vichada\n",
+      "382      91.0                                           AMAZONAS\n",
+      "392      88.0  Archipiélago de San Andrés_ Providencia y Sant...\n",
+      "423      66.0                                          RISARALDA\n",
+      "428      94.0                                            Guaínia\n",
+      "449      50.0                                               META\n",
+      "457      95.0                                           GUAVIARE\n",
+      "458      97.0                                             VAUPÉS\n",
+      "480      88.0                                         SAN ANDRÉS\n",
+      "553      54.0                                 NORTE DE SANTANDER\n",
+      "978      97.0                                             Vaupes\n",
+      "1153     86.0                                           PUTUMAYO\n",
+      "1377     63.0                                            QUINDIO\n",
+      "1598      9.0                                    Sin información\n",
+      "1631     63.0                                            Quindío\n",
+      "1958      9.0                                        NO DEFINIDO\n",
+      "2014     11.0                                             Bogotá\n",
+      "2117     88.0           San Andrés_ Providencia y Santa Catalina\n",
+      "2745     11.0                                      Bogotá_ D. C.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1122"
+       "81"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "measure = df[['idmpio']].dropna(how='all').drop_duplicates()\n",
-    "# print(measure)\n",
+    "measure = df[['iddepto','nomdepto']].dropna(how='all').drop_duplicates()\n",
+    "print(measure[50:200])\n",
     "len(measure)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
